--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "appwrite": "^14.0.0",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
@@ -22,6 +23,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "valtio": "^1.13.2",
     "web-vitals": "^2.1.4"
   },
