--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1",
     "valtio": "^1.13.2",
     "web-vitals": "^2.1.4"
   },
